# lattice_hydrodynamics

./: .gitignore  CMakeLists.txt  Makefile  README.md  algebra.hpp  main.cc  prog.elf
src/: agency.hpp  algebra.hpp  build_options.h.in  comm.hpp  distributed.cc  distributed.h  distributed.hpp  main.cc  meta.hpp  space.hpp  stencil.hpp  xalgebra.hpp
